--- a/text6.html
+++ b/text6.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form method="get" action="secondPage.html">
+<form method="post" action="secondPage.html">
 Name: <input type="text" name="myName" value="Reza" >
 <br>
 <textarea rows=20 cols=30>Hello</textarea>
