--- a/text6.html
+++ b/text6.html
@@ -8,7 +8,24 @@
 <form method="post" action="secondPage.html">
 Name: <input type="text" name="myName" value="Reza" >
 <br>
-<textarea rows=20 cols=30>Hello</textarea>
+  <table>
+    <tr>
+      <td>
+        <textarea rows=20 cols=30>Hello</textarea>
+      <\td>
+      <td>
+       What kind of shirt are you wearing? <br>
+        Shade:
+        <input type="radio" name="shade" value="dark"> Dark
+        <input type="radio" name="shade" value="light"> Light <br>
+        Size:
+        <input type="radio" name="size" value="small"> Small
+        <input type="radio" name="size" value="medium"> Medium
+        <input type="radio" name="size" value="large"> Large <br>
+      <\td>
+    <\tr>
+
+    <\table>
 <br>
 <input type="submit" value="Redirect Me">
 
