--- a/text6.html
+++ b/text6.html
@@ -22,6 +22,14 @@ Name: <input type="text" name="myName" value="Reza" >
         <input type="radio" name="size" value="medium"> Medium
         <input type="radio" name="size" value="large"> Large <br>
     <br>
+        <td>
+          Select Your Favorite Cartoon Characters:
+<input type="checkbox" name="toon1" value="Goofy"> Goofy
+<input type="checkbox" name="toon2" value="Donald"> Donald
+<input type="checkbox" name="toon3" value="Bugs"> Bugs Bunny
+<input type="checkbox" name="toon4" value="Scoob"> Scooby Doo      
+        
+
     <input type="submit" value="Redirect Me">
 </form>
 </body>
