--- a/text6.html
+++ b/text6.html
@@ -28,7 +28,8 @@ Name: <input type="text" name="myName" value="Reza" >
 <input type="checkbox" name="toon3" value="Bugs"> Bugs Bunny
 <input type="checkbox" name="toon4" value="Scoob"> Scooby Doo      
         
-<br>
+<tr>
+  <td colspan="3">
     <input type="submit" value="Redirect Me">
 </form>
 </body>
