--- a/text6.html
+++ b/text6.html
@@ -8,11 +8,7 @@
 <form method="get" action="secondPage.html">
 Name: <input type="text" name="myName" value="Reza" >
 <br>
-  <table>
-    <tr>
-      <td>
-        <textarea rows=20 cols=30>Hello</textarea>
-      <td>
+        <!-- textarea rows=20 cols=30>Hello</textarea -->
        What kind of shirt are you wearing? <br>
         Shade:
         <input type="radio" name="shade" value="dark"> Dark
@@ -21,16 +17,15 @@ Name: <input type="text" name="myName" value="Reza" >
         <input type="radio" name="size" value="small"> Small
         <input type="radio" name="size" value="medium"> Medium
         <input type="radio" name="size" value="large"> Large <br>
-        <td>
+        <br>
           Select Your Favorite Cartoon Characters:
 <input type="checkbox" name="toon1" value="Goofy"> Goofy
 <input type="checkbox" name="toon2" value="Donald"> Donald
 <input type="checkbox" name="toon3" value="Bugs"> Bugs Bunny
 <input type="checkbox" name="toon4" value="Scoob"> Scooby Doo      
-        
-<tr>
-  <td colspan="3">
+        <br>
     <input type="submit" value="Redirect Me">
+    <input type="reset" value="Clear the form">
 </form>
 </body>
 </html>
