--- a/test_for_farmingdale/hello.html
+++ b/test_for_farmingdale/hello.html
@@ -6,6 +6,7 @@
 <body>
 
 <h1>Hello Sleepy Class</h1>
+  <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=&url=http%3A%2F%2Fanimalia-life.com%2Fcat.html&psig=AFQjCNGnscYSgbj2vTyZ7vWzoUVq4JD3LA&ust=1475330934692169">
 <p>The first task today: Name the most sleepy student in the class.</p>
 
 </body>
